<resources>
    <string name="app_name">Meme Editor</string>
    <string name="add_image">Add Image</string>
    <string name="editor">Editor</string>
    <string name="type_here">Type here…</string>
    <string name="background_image">Background Image</string>
    <string name="image">Image</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="fit_center">Fit Center</string>
    <string name="center">Center</string>
    <string name="center_inside">Center Inside</string>
    <string name="center_crop">Center Crop</string>
    <string name="fit_end">Fit End</string>
    <string name="fit_start">Fit Start</string>
    <string name="fit_xy">Fit XY</string>
    <string name="matrix">Matrix</string>
    <string name="background_scale_type">Background Scale Type</string>
    <string name="preview">Preview</string>
    <string name="adjust_text_size">Adjust Text Size</string>
    <string name="select_font_style">Select Font Style</string>
    <string name="select_text_color">Select Text Color</string>
    <string name="text_background">Text Background</string>
    <string name="font_chewy">Chewy</string>
    <string name="font_lobster">Lobster</string>
    <string name="font_open_sans">Open Sans</string>
    <string name="font_oswald">Oswald</string>
    <string name="font_roboto">Roboto</string>
    <string name="font_ubuntu">Ubuntu</string>
    <string name="default_">Default</string>
    <string name="advance_features">Advance Features</string>
    <string name="text_padding">Text Padding</string>
    <string name="adjust_text_padding">Adjust Text Padding</string>
    <string name="start_padding">Start Padding</string>
    <string name="end_padding">End Padding</string>
    <string name="top_padding">Top Padding</string>
    <string name="link_all_sides">Link All Sides</string>
    <string name="background_color">Background Color</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="image_width">Image Width</string>
    <string name="image_height">Image Height</string>
    <string name="by_gautham">By Gautham</string>
    <string name="no_files_found">No Files Found</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="delete">Delete</string>
    <string name="resize_image">Resize Image</string>
    <string name="edit_create_memes">Edit/Create Memes</string>
    <string name="show_edited_files">Show Edited Files</string>
    <string name="max_height">Max Height</string>
    <string name="_1080">1080</string>
    <string name="x">x</string>
    <string name="image_size">Image Size</string>
    <string name="_720">720</string>
    <string name="max_width">Max Width</string>
    <string name="advance">Advance</string>
    <string name="crop">Crop</string>
    <string name="restore">Restore</string>
    <string name="bottom_padding">Bottom Padding</string>
    <string name="add_text">Add Text</string>
    <string name="text_style">Text Style</string>
    <string name="text_background_color">Text Background Color</string>
</resources>
