<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ReSize">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/resize_image" />

    <ImageView
        android:id="@+id/image_reSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/img_size_container"
        android:layout_below="@+id/toolbar"
        android:layout_margin="12dp"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter" />

    <HorizontalScrollView
        android:id="@+id/img_size_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_scale_type"
        android:layout_alignParentBottom="true"
        android:scrollbarFadeDuration="2"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/max_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:background="@drawable/editor_bg"
                    android:hint="@string/max_height"
                    android:inputType="number"
                    android:paddingStart="6dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="12dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:text="@string/_1080"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_height" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/x"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/max_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:background="@drawable/editor_bg"
                    android:hint="@string/max_width"
                    android:inputType="number"
                    android:paddingStart="6dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="12dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:text="@string/_720"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_width" />

            </LinearLayout>

            <TextView
                android:id="@+id/image_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="end"
                android:padding="12dp"
                android:text="@string/image_size" />

            <Button
                android:id="@+id/enableAdvance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down"
                android:onClick="enable_advance"
                android:text="@string/advance"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/image_scale_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:visibility="gone">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:animateLayoutChanges="true"
            android:padding="12dp"
            android:scrollbarFadeDuration="1"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/fitCenter"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/image_style_bg"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/fit_center" />

                <TextView
                    android:id="@+id/center"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/center" />

                <TextView
                    android:id="@+id/centerInside"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/center_inside" />

                <TextView
                    android:id="@id/centerCrop"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/center_crop" />

                <TextView
                    android:id="@+id/fitEnd"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/fit_end" />

                <TextView
                    android:id="@+id/fitStart"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/fit_start" />

                <TextView
                    android:id="@+id/fitXy"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/fit_xy" />

                <TextView
                    android:id="@+id/matrix"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/matrix" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:text="@string/background_scale_type" />

    </LinearLayout>

</RelativeLayout>