<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/image_width"/>

        <TextView
            android:id="@+id/seekbar_width_value"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="12dp"
        android:background="@color/dividerColor"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/image_height"/>

        <TextView
            android:id="@+id/seekbar_height_value"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="12dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:scrollbars="none"
        android:padding="12dp"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/fitCenter_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fit_center"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/fitXy_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fit_xy"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/center_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/center"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/centerInside_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/center_inside"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/centerCrop_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/center_crop"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/fitEnd_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fit_end"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/fitStart_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fit_start"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/matrix_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matrix"
                style="@android:style/TextAppearance.Medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>